--- a/portfolio.html
+++ b/portfolio.html
@@ -1,72 +1,153 @@
 <!DOCTYPE html>
 <html lang="ru">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.css" />
-  <title>Document</title>
-</head>
-<body>
-  <main>
-    <div class="filters">
-      <ul>
-        <li>Все</li>
-        <li>Веб-сайты</li>
-        <li>Приложения</li>
-        <li>Дизайн</li>
-        <li>Маркетинг</li>
-      </ul>
-    </div>
-    <section>
-      <ul>
-        <li>
-          <img src="/images/portfolio/img1.jpg" alt="Карточки людей на екране ноутбука">
-          <h3>Технокряк</h3>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img src="/images/portfolio/img2.jpg" alt="Баскетболисты с мячом">
-          <h3>Постер New Orlean vs Golden Star</h3>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="/images/portfolio/img3.jpg" alt="Реклама ресторана">
-          <h3>Постер New Orlean vs Golden Star</h3>
-          <p>Приложение</p>
-        </li>
-        <li>
-          <img src="/images/portfolio/img4.jpg" alt="Наушники">
-          <h3>Проект Prime</h3>
-          <p>Маркетинг</p>
-        </li>
-        <li>
-          <img src="/images/portfolio/img5.jpg" alt="Упаковочные коробки">
-          <h3>Проект Boxes</h3>
-          <p>Приложение</p>
-        </li>
-        <li>
-          <img src="/images/portfolio/img6.jpg" alt="Монитор ПК">
-          <h3>Inspiration has no Borders</h3>
-          <p>Веб-сайт</p>
-        </li>
-        <li>
-          <img src="/images/portfolio/img7.jpg" alt="Раскрытый модный журнал ">
-          <h3>Издание Limited Edition</h3>
-          <p>Дизайн</p>
-        </li>
-        <li>
-          <img src="/images/portfolio/img8.jpg" alt="Бирка">
-          <h3>Проект LAB</h3>
-          <p>Маркетинг</p>
-        </li>   
-        <li>
-          <img src="/images/portfolio/img9.jpg" alt="Работа с ноутбуком">
-          <h3>Growing Business</h3>
-          <p>Приложение</p>
-        </li>
-      </ul>
-    </section>
-  </main>
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/normalize.css"/>
+    <link rel="stylesheet" href="css/aside.css"/>
+    <link rel="stylesheet" href="css/portfolio.css"/>
+    <title>WebStudio</title>
+  </head>
+  <body>
+    <div class="wrapper">
+      <div class="wrapper-header">
+        <header>
+          <div class="wrapper__menu">
+            <nav class="menu">
+              <a href="./index.html" class="logo logo-black"
+                ><span>Web</span>Studio</a
+              >
+              <ul class="menu__items">
+                <li class="menu__item"><a href="">Студия</a></li>
+                <li class="menu__item">
+                  <a href="/portfolio.html">Портфолио</a>
+                </li>
+                <li class="menu__item"><a href="">Контакты</a></li>
+              </ul>
+            </nav>
+            <ul class="menu__items menu__items-kontakt">
+              <li class="menu__item">
+                <a  href="mailto:info@devstudio.com">info@devstudio.com</a>
+              </li>
+              <li class="menu__item">
+                <a href="tel:+380961111111">+38 096 111 11 11</a>
+              </li>
+            </ul>
+          </div>
+          <div class="line"></div>
+        </header>
+      </div>
+      <main>
+        <div class="main__wripper">
+          <div class="filters">
+            <ul class="filter">
+              <li class="filter-item"><button type="button" class="filter__button">Все</button></li>
+              <li class="filter-item"><button type="button" class="filter__button">Веб-сайты</button></li>
+              <li class="filter-item"><button type="button" class="filter__button">Приложения</button></li>
+              <li class="filter-item"><button type="button" class="filter__button">Дизайн</button></li>
+              <li class="filter-item"><button type="button" class="filter__button">Маркетинг</button></li>
+            </ul>
+          </div>
+          <section class="container">
+            <ul class="galery">
+              <li>
+                <div class="card">
+                  <img src="/images/portfolio/img1.jpg" alt="Карточки людей на екране ноутбука">
+                  <h3>Технокряк</h3>
+                  <p>Веб-сайт</p>
+                </div>
+              </li>
+              <li>
+                <div class="card">
+                  <img src="/images/portfolio/img2.jpg" alt="Баскетболисты с мячом">
+                  <h3>Постер New Orlean vs Golden Star</h3>
+                  <p>Дизайн</p>
+                </div>
+              </li>
+              <li>
+                <div class="card">
+                  <img src="/images/portfolio/img3.jpg" alt="Реклама ресторана">
+                  <h3>Постер New Orlean vs Golden Star</h3>
+                  <p>Приложение</p>
+                </div>
+              </li>
+              <li>
+                <div class="card">
+                  <img src="/images/portfolio/img4.jpg" alt="Наушники">
+                  <h3>Проект Prime</h3>
+                  <p>Маркетинг</p>
+                </div>
+              </li>
+              <li>
+                <div class="card">
+                  <img src="/images/portfolio/img5.jpg" alt="Упаковочные коробки">
+                  <h3>Проект Boxes</h3>
+                  <p>Приложение</p>
+                </div>
+              </li>
+              <li>
+                <div class="card">
+                  <img src="/images/portfolio/img6.jpg" alt="Монитор ПК">
+                  <h3>Inspiration has no Borders</h3>
+                  <p>Веб-сайт</p>
+                </div>
+              </li>
+              <li>
+                <div class="card">
+                  <img src="/images/portfolio/img7.jpg" alt="Раскрытый модный журнал ">
+                  <h3>Издание Limited Edition</h3>
+                  <p>Дизайн</p>
+                </div>
+              </li>
+              <li>
+                <div class="card">
+                  <img src="/images/portfolio/img8.jpg" alt="Бирка">
+                  <h3>Проект LAB</h3>
+                  <p>Маркетинг</p>
+                </div>
+              </li>   
+              <li>
+                <div class="card">
+                  <img src="/images/portfolio/img9.jpg" alt="Работа с ноутбуком">
+                  <h3>Growing Business</h3>
+                  <p>Приложение</p>
+                </div>
+              </li>
+            </ul>
+          </section>
+        </div>
+      </main>
+
+      <footer>
+        <div class="footer-wrapper">
+          <a href="./index.html" class="logo logo-white">
+            <span>Web</span>Studio
+          </a>
+          <address>
+            <ul class="address-items">
+              <li>
+                <a class="address-item-adress"
+                  href="https://goo.gl/maps/3Kuta68CW6E7DT3t5"
+                  target="_blank"
+                  rel="noopener nofollow"
+                  >г.Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li>
+                <a class="address-item-kontakt" href="mailto:info@example.com">info@example.com</a>
+              </li>
+              <li>
+                <a class="address-item-kontakt" href="tel:+380991111111">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div>
+      </footer>
+    </div>  
+  </body>
 </html>
