--- a/portfolio.html
+++ b/portfolio.html
@@ -58,64 +58,82 @@
               <li>
                 <div class="card">
                   <img src="/images/portfolio/img1.jpg" alt="Карточки людей на екране ноутбука">
-                  <h3>Технокряк</h3>
-                  <p>Веб-сайт</p>
+                  <div class="card__subscribe">
+                    <h3>Технокряк</h3>
+                    <p>Веб-сайт</p>
+                  </div> 
                 </div>
               </li>
               <li>
                 <div class="card">
                   <img src="/images/portfolio/img2.jpg" alt="Баскетболисты с мячом">
-                  <h3>Постер New Orlean vs Golden Star</h3>
-                  <p>Дизайн</p>
+                  <div class="card__subscribe">
+                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <p>Дизайн</p>
+                </div>
                 </div>
               </li>
               <li>
                 <div class="card">
                   <img src="/images/portfolio/img3.jpg" alt="Реклама ресторана">
-                  <h3>Постер New Orlean vs Golden Star</h3>
-                  <p>Приложение</p>
+                  <div class="card__subscribe">
+                    <h3>Постер New Orlean vs Golden Star</h3>
+                    <p>Приложение</p>
+                  </div>
                 </div>
               </li>
               <li>
                 <div class="card">
                   <img src="/images/portfolio/img4.jpg" alt="Наушники">
-                  <h3>Проект Prime</h3>
-                  <p>Маркетинг</p>
+                  <div class="card__subscribe">
+                    <h3>Проект Prime</h3>
+                    <p>Маркетинг</p>
+                  </div>
                 </div>
               </li>
               <li>
                 <div class="card">
                   <img src="/images/portfolio/img5.jpg" alt="Упаковочные коробки">
-                  <h3>Проект Boxes</h3>
-                  <p>Приложение</p>
+                  <div class="card__subscribe">
+                    <h3>Проект Boxes</h3>
+                    <p>Приложение</p>
+                  </div>
                 </div>
               </li>
               <li>
                 <div class="card">
                   <img src="/images/portfolio/img6.jpg" alt="Монитор ПК">
-                  <h3>Inspiration has no Borders</h3>
-                  <p>Веб-сайт</p>
+                  <div class="card__subscribe">
+                    <h3>Inspiration has no Borders</h3>
+                    <p>Веб-сайт</p>
+                </div>
                 </div>
               </li>
               <li>
                 <div class="card">
                   <img src="/images/portfolio/img7.jpg" alt="Раскрытый модный журнал ">
-                  <h3>Издание Limited Edition</h3>
-                  <p>Дизайн</p>
+                  <div class="card__subscribe">
+                    <h3>Издание Limited Edition</h3>
+                    <p>Дизайн</p>
+                  </div>
                 </div>
               </li>
               <li>
                 <div class="card">
                   <img src="/images/portfolio/img8.jpg" alt="Бирка">
-                  <h3>Проект LAB</h3>
-                  <p>Маркетинг</p>
+                  <div class="card__subscribe">
+                    <h3>Проект LAB</h3>
+                    <p>Маркетинг</p>
+                  </div>  
                 </div>
               </li>   
               <li>
                 <div class="card">
                   <img src="/images/portfolio/img9.jpg" alt="Работа с ноутбуком">
-                  <h3>Growing Business</h3>
-                  <p>Приложение</p>
+                  <div class="card__subscribe">
+                    <h3>Growing Business</h3>
+                    <p>Приложение</p>
+                  </div>  
                 </div>
               </li>
             </ul>
