--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
           <div class="wrapper__menu">
             <nav class="menu">
               <a href="./index.html" class="logo logo-black"
-                ><span>Web</span>Studio</a
+                ><span class="chromatic">Web</span>Studio</a
               >
               <ul class="menu__items">
-                <li class="menu__item"><a href="">Студия</a></li>
-                <li class="menu__item">
-                  <a href="/portfolio.html">Портфолио</a>
+                <li class="menu__item item-menu1 active"><a class="item-menu" href="./index.html">Студия</a></li>
+                <li class="menu__item item-menu2">
+                  <a class="item-menu" href="/portfolio.html">Портфолио</a>
                 </li>
-                <li class="menu__item"><a href="">Контакты</a></li>
+                <li class="menu__item item-menu3"><a class="item-menu" href="">Контакты</a></li>
               </ul>
             </nav>
             <ul class="menu__items menu__items-kontakt">
