--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,7 @@
               <ul class="menu__items">
                 <li class="menu__item item-menu1"><a class="item-menu" href="./index.html">Студия</a></li>
                 <li class="menu__item item-menu2 active">
-                  <a class="item-menu" href="/portfolio.html">Портфолио</a>
+                  <a class="item-menu" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="menu__item item-menu3"><a class="item-menu" href="">Контакты</a></li>
               </ul>
