--- a/portfolio.html
+++ b/portfolio.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/aside.css"/>
-    <link rel="stylesheet" href="css/portfolio.css"/>
+    <link rel="stylesheet" href="./css/normalize.css"/>
+    <link rel="stylesheet" href="./css/aside.css"/>
+    <link rel="stylesheet" href="./css/portfolio.css"/>
     <title>WebStudio</title>
   </head>
   <body>
@@ -57,7 +57,7 @@
             <ul class="galery">
               <li>
                 <div class="card">
-                  <img src="/images/portfolio/img1.jpg" alt="Карточки людей на екране ноутбука">
+                  <img src="./images/portfolio/img1.jpg" alt="Карточки людей на екране ноутбука">
                   <div class="card__subscribe">
                     <h3>Технокряк</h3>
                     <p>Веб-сайт</p>
@@ -66,7 +66,7 @@
               </li>
               <li>
                 <div class="card">
-                  <img src="/images/portfolio/img2.jpg" alt="Баскетболисты с мячом">
+                  <img src="./images/portfolio/img2.jpg" alt="Баскетболисты с мячом">
                   <div class="card__subscribe">
                     <h3>Постер New Orlean vs Golden Star</h3>
                     <p>Дизайн</p>
@@ -75,7 +75,7 @@
               </li>
               <li>
                 <div class="card">
-                  <img src="/images/portfolio/img3.jpg" alt="Реклама ресторана">
+                  <img src="./images/portfolio/img3.jpg" alt="Реклама ресторана">
                   <div class="card__subscribe">
                     <h3>Постер New Orlean vs Golden Star</h3>
                     <p>Приложение</p>
@@ -84,7 +84,7 @@
               </li>
               <li>
                 <div class="card">
-                  <img src="/images/portfolio/img4.jpg" alt="Наушники">
+                  <img src="./images/portfolio/img4.jpg" alt="Наушники">
                   <div class="card__subscribe">
                     <h3>Проект Prime</h3>
                     <p>Маркетинг</p>
@@ -93,7 +93,7 @@
               </li>
               <li>
                 <div class="card">
-                  <img src="/images/portfolio/img5.jpg" alt="Упаковочные коробки">
+                  <img src="./images/portfolio/img5.jpg" alt="Упаковочные коробки">
                   <div class="card__subscribe">
                     <h3>Проект Boxes</h3>
                     <p>Приложение</p>
