Посилання в index html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="css/normalize.css"/>
-    <link rel="stylesheet" href="css/aside.css"/>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <link rel="stylesheet" href="./css/normalize.css"/>
+    <link rel="stylesheet" href="./css/aside.css"/>
+    <link rel="stylesheet" href="./css/styles.css"/>
     <title>WebStudio</title>
   </head>
   <body>
@@ -25,7 +25,7 @@
               <ul class="menu__items">
                 <li class="menu__item item-menu1 active"><a class="item-menu" href="./index.html">Студия</a></li>
                 <li class="menu__item item-menu2">
-                  <a class="item-menu" href="/portfolio.html">Портфолио</a>
+                  <a class="item-menu" href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="menu__item item-menu3"><a class="item-menu" href="">Контакты</a></li>
               </ul>
