--- a/portfolio.html
+++ b/portfolio.html
@@ -102,7 +102,7 @@
               </li>
               <li>
                 <div class="card">
-                  <img src="/images/portfolio/img6.jpg" alt="Монитор ПК">
+                  <img src="./images/portfolio/img6.jpg" alt="Монитор ПК">
                   <div class="card__subscribe">
                     <h3>Inspiration has no Borders</h3>
                     <p>Веб-сайт</p>
@@ -111,7 +111,7 @@
               </li>
               <li>
                 <div class="card">
-                  <img src="/images/portfolio/img7.jpg" alt="Раскрытый модный журнал ">
+                  <img src="./images/portfolio/img7.jpg" alt="Раскрытый модный журнал ">
                   <div class="card__subscribe">
                     <h3>Издание Limited Edition</h3>
                     <p>Дизайн</p>
@@ -120,7 +120,7 @@
               </li>
               <li>
                 <div class="card">
-                  <img src="/images/portfolio/img8.jpg" alt="Бирка">
+                  <img src="./images/portfolio/img8.jpg" alt="Бирка">
                   <div class="card__subscribe">
                     <h3>Проект LAB</h3>
                     <p>Маркетинг</p>
@@ -129,7 +129,7 @@
               </li>   
               <li>
                 <div class="card">
-                  <img src="/images/portfolio/img9.jpg" alt="Работа с ноутбуком">
+                  <img src="./images/portfolio/img9.jpg" alt="Работа с ноутбуком">
                   <div class="card__subscribe">
                     <h3>Growing Business</h3>
                     <p>Приложение</p>
