--- a/index.html
+++ b/index.html
@@ -8,26 +8,23 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/normalize.css"/>
-    <link rel="stylesheet" href="./css/aside.css"/>
+    <!-- <link rel="stylesheet" href="./css/normalize.css"/> -->
+    <!-- <link rel="stylesheet" href="./css/aside.css"/> -->
     <link rel="stylesheet" href="./css/styles.css"/>
     <title>WebStudio</title>
   </head>
   <body>
-    <div class="wrapper">
-      <div class="wrapper-header">
+    <!-- <div class="wrapper"> -->
+      <!-- <div class="wrapper-header"> -->
         <header>
-          <div class="wrapper__menu">
+          <!-- <div class="wrapper__menu"> -->
             <nav class="menu">
-              <a href="./index.html" class="logo logo-black"
-                ><span class="chromatic">Web</span>Studio</a
+              <a href="./index.html" class="logo logo-black"><span class="chromatic">Web</span>Studio</a
               >
               <ul class="menu__items">
-                <li class="menu__item item-menu1 active"><a class="item-menu" href="./index.html">Студия</a></li>
-                <li class="menu__item item-menu2">
-                  <a class="item-menu" href="./portfolio.html">Портфолио</a>
-                </li>
-                <li class="menu__item item-menu3"><a class="item-menu" href="">Контакты</a></li>
+                <li class="menu__item item-menu1 active"><a class="item-menu"  href="./index.html">Студия</a></li>
+                <li class="menu__item item-menu2"><a class="item-menu"  href="./portfolio.html">Портфолио</a></li>
+                <li class="menu__item item-menu3"><a class="item-menu"  href="">Контакты</a></li>
               </ul>
             </nav>
             <ul class="menu__items menu__items-kontakt">
@@ -38,56 +35,56 @@
                 <a href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
-          </div> 
+          <!-- </div>  wrapper__menu -->
           <div class="line"></div>
         </header>
-      </div>
+      <!-- </div> wrapper-header-->
         <main>
-          <section class="section-1">
-            <div class="section-1__wrapper">
+          <section class="section-hero">
+            <div class="section-hero__wrapper">
               <h1>Эффективные решения для вашего бизнеса</h1>
-              <button type="button" class="section-1__button">
+              <button type="button" class="section-hero__button">
                 Заказать услугу
               </button>
             </div>
           </section>
-          <div class="wrapper-main-s2s3">
-            <section class="section-2">
-              <h2 class="h2-hidden">Особенности</h2>
-              <ul class="section-2__items">
-                <li class="section-2__item">
-                  <h3 class="section-2__item-title">Внимание к деталям</h3>
-                  <p class="section-2__item-content">
+          <div class="wrapper-sections-ater-hero">
+            <section class="section-features">
+              <h2 class="visually-hidden">Особенности</h2>
+              <ul class="section-features__items">
+                <li class="section-features__item">
+                  <h3 class="section-features__item-title">Внимание к деталям</h3>
+                  <p class="section-features__item-content">
                     Идейные соображения, а также начало повседневной работы по
                     формированию позиции.
                   </p>
                 </li>
-                <li class="section-2__item">
-                  <h3 class="section-2__item-title">Пунктуальность</h3>
-                  <p  class="section-2__item-content">
+                <li class="section-features__item">
+                  <h3 class="section-features__item-title">Пунктуальность</h3>
+                  <p  class="section-features__item-content">
                     Задача организации, в особенности же рамки и место обучения
                     кадров влечет за собой.
                   </p>
                 </li>
-                <li class="section-2__item">
-                  <h3 class="section-2__item-title">Планирование</h3>
-                  <p class="section-2__item-content">
+                <li class="section-features__item">
+                  <h3 class="section-features__item-title">Планирование</h3>
+                  <p class="section-features__item-content">
                     Равным образом консультация с широким активом в значительной
                     степени обуславливает.
                   </p>
                 </li>
-                <li class="section-2__item">
-                  <h3 class="section-2__item-title">Современные технологии</h3>
-                  <p class="section-2__item-content">
+                <li class="section-features__item">
+                  <h3 class="section-features__item-title">Современные технологии</h3>
+                  <p class="section-features__item-content">
                     Значимость этих проблем настолько очевидна, что реализация
                     плановых заданий.
                   </p>
                 </li>
               </ul>
             </section>
-            <section class="section-3">
+            <section class="section-lesson">              
               <h2>Чем мы занимаемся</h2>
-              <ul  class="section-2__items">
+              <ul  class="section-lesson__items">
                 <li><img src="./images/box-1.jpg" alt="ПК" width="370" /></li>
                 <li>
                   <img src="./images/box-2.jpg" alt="Телефон" width="370" />
@@ -98,31 +95,31 @@
               </ul>
             </section>
           </div> 
-          <div class="wrapper-main-s4"> 
-            <section  class="section-4">
+          <div class="wrapper-main-team"> 
+            <section  class="section-team">
             
-              <h2 class="section-4__title">Наша команда</h2>
-              <ul   class="section-4__items">
-                <li class="section-4_item card">
-                  <img class="section-4__item-img" src="./images/team-1.jpg" alt="Игорь Демьяненко" width="270"/>
-                  <h3 class="section-4__item-title">Игорь Демьяненко</h3>
-                  <p class="section-4__item-content" lang="en">Product Designer</p>
+              <h2 class="section-team__title">Наша команда</h2>
+              <ul   class="section-team__items">
+                <li class="section-team_item card">
+                  <img class="section-team__item-img" src="./images/team-1.jpg" alt="Игорь Демьяненко" width="270"/>
+                  <h3 class="section-team__item-title">Игорь Демьяненко</h3>
+                  <p class="section-team__item-content" lang="en">Product Designer</p>
                 </li>
-                <li class="section-4_item card">
-                  <img class="section-4__item-img" src="./images/team-2.jpg" alt="Ольга Репина" width="270"/>
-                  <h3 class="section-4__item-title">Ольга Репина</h3>
-                  <p class="section-4__item-content" lang="en">Frontend Developer</p>
+                <li class="section-team_item card">
+                  <img class="section-team__item-img" src="./images/team-2.jpg" alt="Ольга Репина" width="270"/>
+                  <h3 class="section-team__item-title">Ольга Репина</h3>
+                  <p class="section-team__item-content" lang="en">Frontend Developer</p>
                 </li>
-                <li class="section-4_item card">
-                  <img class="section-4__item-img" src="./images/team-3.jpg" alt="Николай Тарасов" width="270"/>
-                  <h3 class="section-4__item-title">Николай Тарасов</h3>
-                  <p class="section-4__item-content" lang="en">Marketing</p>
+                <li class="section-team_item card">
+                  <img class="section-team__item-img" src="./images/team-3.jpg" alt="Николай Тарасов" width="270"/>
+                  <h3 class="section-team__item-title">Николай Тарасов</h3>
+                  <p class="section-team__item-content" lang="en">Marketing</p>
                 </li>
-                <li class="section-4_item card">
+                <li class="section-team_item card">
                   <img
-                  class="section-4__item-img" src="./images/team-4.jpg" alt="Михаил Ермаков" width="270"/>
-                  <h3 class="section-4__item-title">Михаил Ермаков</h3>
-                  <p class="section-4__item-content" lang="en">UI Designer</p>
+                  class="section-team__item-img" src="./images/team-4.jpg" alt="Михаил Ермаков" width="270"/>
+                  <h3 class="section-team__item-title">Михаил Ермаков</h3>
+                  <p class="section-team__item-content" lang="en">UI Designer</p>
                 </li>
               </ul>
             </section>
@@ -133,10 +130,10 @@
           <a href="./index.html" class="logo logo-white">
             <span>Web</span>Studio
           </a>
-          <address>
-            <ul class="address-items">
+          <adress>
+            <ul class="adress-items">
               <li>
-                <a class="address-item-adress"
+                <a class="item-adress"
                   href="https://goo.gl/maps/3Kuta68CW6E7DT3t5"
                   target="_blank"
                   rel="noopener nofollow"
@@ -144,16 +141,16 @@
                 >
               </li>
               <li>
-                <a class="address-item-kontakt" href="mailto:info@example.com">info@example.com</a>
+                <a class="adress-item-kontakt" href="mailto:info@example.com">info@example.com</a>
               </li>
               <li>
-                <a class="address-item-kontakt" href="tel:+380991111111">+38 099 111 11 11</a>
+                <a class="adress-item-kontakt" href="tel:+380991111111">+38 099 111 11 11</a>
               </li>
             </ul>
-          </address>
+          </adress>
         </div>
       </footer>
       
-    </div>
+    <!-- </div>   class="wrapper" -->
   </body>
 </html>
