--- a/portfolio.html
+++ b/portfolio.html
@@ -8,9 +8,10 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/normalize.css"/>
-    <link rel="stylesheet" href="./css/aside.css"/>
-    <link rel="stylesheet" href="./css/portfolio.css"/>
+    <!-- <link rel="stylesheet" href="./css/normalize.css"/> -->
+    <!-- <link rel="stylesheet" href="./css/aside.css"/> -->
+    <!-- <link rel="stylesheet" href="./css/portfolio.css"/> -->
+    <link rel="stylesheet" href="./css/styles.css"/>
     <title>WebStudio</title>
   </head>
   <body>
@@ -25,7 +26,7 @@
               <ul class="menu__items">
                 <li class="menu__item item-menu1"><a class="item-menu" href="./index.html">Студия</a></li>
                 <li class="menu__item item-menu2 active">
-                  <a class="item-menu" href="./portfolio.html">Портфолио</a>
+                  <a class="item-menu " href="./portfolio.html">Портфолио</a>
                 </li>
                 <li class="menu__item item-menu3"><a class="item-menu" href="">Контакты</a></li>
               </ul>
@@ -59,8 +60,8 @@
                 <div class="card">
                   <img src="./images/portfolio/img1.jpg" alt="Карточки людей на екране ноутбука">
                   <div class="card__subscribe">
-                    <h3>Технокряк</h3>
-                    <p>Веб-сайт</p>
+                    <h3 class="card__subscribe-title">Технокряк</h3>
+                    <p class="card__subscribe-content">Веб-сайт</p>
                   </div> 
                 </div>
               </li>
@@ -68,8 +69,8 @@
                 <div class="card">
                   <img src="./images/portfolio/img2.jpg" alt="Баскетболисты с мячом">
                   <div class="card__subscribe">
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Дизайн</p>
+                    <h3 class="card__subscribe-title">Постер New Orlean vs Golden Star</h3>
+                    <p class="card__subscribe-content">Дизайн</p>
                 </div>
                 </div>
               </li>
@@ -77,8 +78,8 @@
                 <div class="card">
                   <img src="./images/portfolio/img3.jpg" alt="Реклама ресторана">
                   <div class="card__subscribe">
-                    <h3>Постер New Orlean vs Golden Star</h3>
-                    <p>Приложение</p>
+                    <h3 class="card__subscribe-title">Постер New Orlean vs Golden Star</h3>
+                    <p class="card__subscribe-content">Приложение</p>
                   </div>
                 </div>
               </li>
@@ -86,8 +87,8 @@
                 <div class="card">
                   <img src="./images/portfolio/img4.jpg" alt="Наушники">
                   <div class="card__subscribe">
-                    <h3>Проект Prime</h3>
-                    <p>Маркетинг</p>
+                    <h3 class="card__subscribe-title">Проект Prime</h3>
+                    <p class="card__subscribe-content">Маркетинг</p>
                   </div>
                 </div>
               </li>
@@ -95,8 +96,8 @@
                 <div class="card">
                   <img src="./images/portfolio/img5.jpg" alt="Упаковочные коробки">
                   <div class="card__subscribe">
-                    <h3>Проект Boxes</h3>
-                    <p>Приложение</p>
+                    <h3 class="card__subscribe-title">Проект Boxes</h3>
+                    <p class="card__subscribe-content">Приложение</p>
                   </div>
                 </div>
               </li>
@@ -104,8 +105,8 @@
                 <div class="card">
                   <img src="./images/portfolio/img6.jpg" alt="Монитор ПК">
                   <div class="card__subscribe">
-                    <h3>Inspiration has no Borders</h3>
-                    <p>Веб-сайт</p>
+                    <h3 class="card__subscribe-title">Inspiration has no Borders</h3>
+                    <p class="card__subscribe-content">Веб-сайт</p>
                 </div>
                 </div>
               </li>
@@ -113,8 +114,8 @@
                 <div class="card">
                   <img src="./images/portfolio/img7.jpg" alt="Раскрытый модный журнал ">
                   <div class="card__subscribe">
-                    <h3>Издание Limited Edition</h3>
-                    <p>Дизайн</p>
+                    <h3 class="card__subscribe-title">Издание Limited Edition</h3>
+                    <p class="card__subscribe-content">Дизайн</p>
                   </div>
                 </div>
               </li>
@@ -122,8 +123,8 @@
                 <div class="card">
                   <img src="./images/portfolio/img8.jpg" alt="Бирка">
                   <div class="card__subscribe">
-                    <h3>Проект LAB</h3>
-                    <p>Маркетинг</p>
+                    <h3 class="card__subscribe-title">Проект LAB</h3>
+                    <p class="card__subscribe-content">Маркетинг</p>
                   </div>  
                 </div>
               </li>   
@@ -131,8 +132,8 @@
                 <div class="card">
                   <img src="./images/portfolio/img9.jpg" alt="Работа с ноутбуком">
                   <div class="card__subscribe">
-                    <h3>Growing Business</h3>
-                    <p>Приложение</p>
+                    <h3 class="card__subscribe-title">Growing Business</h3>
+                    <p class="card__subscribe-content">Приложение</p>
                   </div>  
                 </div>
               </li>
@@ -146,10 +147,10 @@
           <a href="./index.html" class="logo logo-white">
             <span>Web</span>Studio
           </a>
-          <address>
-            <ul class="address-items">
+          <adress>
+            <ul class="adress-items">
               <li>
-                <a class="address-item-adress"
+                <a class="item-adress"
                   href="https://goo.gl/maps/3Kuta68CW6E7DT3t5"
                   target="_blank"
                   rel="noopener nofollow"
@@ -157,13 +158,13 @@
                 >
               </li>
               <li>
-                <a class="address-item-kontakt" href="mailto:info@example.com">info@example.com</a>
+                <a class="adress-item-kontakt" href="mailto:info@example.com">info@example.com</a>
               </li>
               <li>
-                <a class="address-item-kontakt" href="tel:+380991111111">+38 099 111 11 11</a>
+                <a class="adress-item-kontakt" href="tel:+380991111111">+38 099 111 11 11</a>
               </li>
             </ul>
-          </address>
+          </adress>
         </div>
       </footer>
     </div>  
