--- a/index.html
+++ b/index.html
@@ -17,25 +17,28 @@
     <!-- <div class="wrapper"> -->
       <!-- <div class="wrapper-header"> -->
         <header>
-          <!-- <div class="wrapper__menu"> -->
+          <div class="wrapper__menu">
             <nav class="menu">
-              <a href="./index.html" class="logo logo-black"><span class="chromatic">Web</span>Studio</a
+              <a href="./index.html" class="logo logo-black"
+                ><span class="chromatic">Web</span>Studio</a
               >
               <ul class="menu__items">
-                <li class="menu__item item-menu1 active"><a class="item-menu"  href="./index.html">Студия</a></li>
-                <li class="menu__item item-menu2"><a class="item-menu"  href="./portfolio.html">Портфолио</a></li>
-                <li class="menu__item item-menu3"><a class="item-menu"  href="">Контакты</a></li>
+                <li class="menu__item item-menu1 active"><a class="item-menu" href="./index.html">Студия</a></li>
+                <li class="menu__item item-menu2">
+                  <a class="item-menu " href="./portfolio.html">Портфолио</a>
+                </li>
+                <li class="menu__item item-menu3"><a class="item-menu" href="">Контакты</a></li>
               </ul>
             </nav>
             <ul class="menu__items menu__items-kontakt">
               <li class="menu__item">
-                <a  href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="menu__item-ref" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
               <li class="menu__item">
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="menu__item-ref"  href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
-          <!-- </div>  wrapper__menu -->
+          </div> 
           <div class="line"></div>
         </header>
       <!-- </div> wrapper-header-->
@@ -130,10 +133,10 @@
           <a href="./index.html" class="logo logo-white">
             <span>Web</span>Studio
           </a>
-          <adress>
-            <ul class="adress-items">
+          <address>
+            <ul class="address-items">
               <li>
-                <a class="item-adress"
+                <a class="item-address"
                   href="https://goo.gl/maps/3Kuta68CW6E7DT3t5"
                   target="_blank"
                   rel="noopener nofollow"
@@ -141,13 +144,13 @@
                 >
               </li>
               <li>
-                <a class="adress-item-kontakt" href="mailto:info@example.com">info@example.com</a>
+                <a class="address-item-kontakt" href="mailto:info@example.com">info@example.com</a>
               </li>
               <li>
-                <a class="adress-item-kontakt" href="tel:+380991111111">+38 099 111 11 11</a>
+                <a class="address-item-kontakt" href="tel:+380991111111">+38 099 111 11 11</a>
               </li>
             </ul>
-          </adress>
+          </address>
         </div>
       </footer>
       
