--- a/portfolio.html
+++ b/portfolio.html
@@ -33,10 +33,10 @@
             </nav>
             <ul class="menu__items menu__items-kontakt">
               <li class="menu__item">
-                <a  href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="menu__item-ref" href="mailto:info@devstudio.com">info@devstudio.com</a>
               </li>
               <li class="menu__item">
-                <a href="tel:+380961111111">+38 096 111 11 11</a>
+                <a class="menu__item-ref"  href="tel:+380961111111">+38 096 111 11 11</a>
               </li>
             </ul>
           </div> 
@@ -44,102 +44,123 @@
         </header>
       </div>
       <main>
-        <div class="main__wripper">
-          <div class="filters">
-            <ul class="filter">
-              <li class="filter-item"><button type="button" class="filter__button">Все</button></li>
-              <li class="filter-item"><button type="button" class="filter__button">Веб-сайты</button></li>
-              <li class="filter-item"><button type="button" class="filter__button">Приложения</button></li>
-              <li class="filter-item"><button type="button" class="filter__button">Дизайн</button></li>
-              <li class="filter-item"><button type="button" class="filter__button">Маркетинг</button></li>
-            </ul>
+        <section class="container">
+          <div class="main__wripper">
+            <h1 class="visually-hidden">Portfolio</h1>
+              <div class="filters">
+                <ul class="filter">
+                  <li class="filter-item"><button type="button" class="filter__button">Все</button></li>
+                  <li class="filter-item"><button type="button" class="filter__button">Веб-сайты</button></li>
+                  <li class="filter-item"><button type="button" class="filter__button">Приложения</button></li>
+                  <li class="filter-item"><button type="button" class="filter__button">Дизайн</button></li>
+                  <li class="filter-item"><button type="button" class="filter__button">Маркетинг</button></li>
+                </ul>
+              </div>
+            
+              <ul class="galery">
+                <li>
+                  <div class="card">
+                    <a href="" class="card-item">
+                      <img src="./images/portfolio/img1.jpg" alt="Карточки людей на екране ноутбука">
+                      <div class="card__subscribe">
+                        <h3 class="card__subscribe-title">Технокряк</h3>
+                        <p class="card__subscribe-content">Веб-сайт</p>
+                      </div> 
+                    </a>
+                  </div>
+                </li>
+                <li>
+                  <div class="card">
+                    <a href="" class="card-item">
+                      <img src="./images/portfolio/img2.jpg" alt="Баскетболисты с мячом">
+                      <div class="card__subscribe">
+                        <h3 class="card__subscribe-title">Постер New Orlean vs Golden Star</h3>
+                        <p class="card__subscribe-content">Дизайн</p>
+                      </div>
+                    </a>
+                  </div>
+                </li>
+                <li>
+                  <div class="card">
+                    <a href="" class="card-item">
+                      <img src="./images/portfolio/img3.jpg" alt="Реклама ресторана">
+                      <div class="card__subscribe">
+                        <h3 class="card__subscribe-title">Постер New Orlean vs Golden Star</h3>
+                        <p class="card__subscribe-content">Приложение</p>
+                      </div>
+                    </a>
+                  </div>
+                </li>
+                <li>
+                  <div class="card">
+                    <a href="" class="card-item">
+                      <img src="./images/portfolio/img4.jpg" alt="Наушники">
+                      <div class="card__subscribe">
+                        <h3 class="card__subscribe-title">Проект Prime</h3>
+                        <p class="card__subscribe-content">Маркетинг</p>
+                      </div>
+                    </a>
+                  </div>
+                </li>
+                <li>
+                  <div class="card">
+                    <a href="" class="card-item">
+                      <img src="./images/portfolio/img5.jpg" alt="Упаковочные коробки">
+                      <div class="card__subscribe">
+                        <h3 class="card__subscribe-title">Проект Boxes</h3>
+                        <p class="card__subscribe-content">Приложение</p>
+                      </div>
+                    </a>  
+                  </div>
+                </li>
+                <li>
+                  <div class="card">
+                    <a href="" class="card-item">
+                      <img src="./images/portfolio/img6.jpg" alt="Монитор ПК">
+                      <div class="card__subscribe">
+                        <h3 class="card__subscribe-title">Inspiration has no Borders</h3>
+                        <p class="card__subscribe-content">Веб-сайт</p>
+                      </div>
+                    </a>
+                  </div>
+                </li>
+                <li>
+                  <div class="card">
+                    <a href="" class="card-item">
+                      <img src="./images/portfolio/img7.jpg" alt="Раскрытый модный журнал ">
+                      <div class="card__subscribe">
+                        <h3 class="card__subscribe-title">Издание Limited Edition</h3>
+                        <p class="card__subscribe-content">Дизайн</p>
+                      </div>
+                    </a>
+                  </div>
+                </li>
+                <li>
+                  <div class="card">
+                    <a href="" class="card-item">
+                      <img src="./images/portfolio/img8.jpg" alt="Бирка">
+                      <div class="card__subscribe">
+                        <h3 class="card__subscribe-title">Проект LAB</h3>
+                        <p class="card__subscribe-content">Маркетинг</p>
+                      </div>  
+                    </a>
+                  </div>
+                </li>   
+                <li>
+                  <div class="card">
+                    <a href="" class="card-item">
+                      <img src="./images/portfolio/img9.jpg" alt="Работа с ноутбуком">
+                      <div class="card__subscribe">
+                        <h3 class="card__subscribe-title">Growing Business</h3>
+                        <p class="card__subscribe-content">Приложение</p>
+                      </div> 
+                    </a>
+                  </div>
+                </li>
+              </ul>
+            
           </div>
-          <section class="container">
-            <ul class="galery">
-              <li>
-                <div class="card">
-                  <img src="./images/portfolio/img1.jpg" alt="Карточки людей на екране ноутбука">
-                  <div class="card__subscribe">
-                    <h3 class="card__subscribe-title">Технокряк</h3>
-                    <p class="card__subscribe-content">Веб-сайт</p>
-                  </div> 
-                </div>
-              </li>
-              <li>
-                <div class="card">
-                  <img src="./images/portfolio/img2.jpg" alt="Баскетболисты с мячом">
-                  <div class="card__subscribe">
-                    <h3 class="card__subscribe-title">Постер New Orlean vs Golden Star</h3>
-                    <p class="card__subscribe-content">Дизайн</p>
-                </div>
-                </div>
-              </li>
-              <li>
-                <div class="card">
-                  <img src="./images/portfolio/img3.jpg" alt="Реклама ресторана">
-                  <div class="card__subscribe">
-                    <h3 class="card__subscribe-title">Постер New Orlean vs Golden Star</h3>
-                    <p class="card__subscribe-content">Приложение</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="card">
-                  <img src="./images/portfolio/img4.jpg" alt="Наушники">
-                  <div class="card__subscribe">
-                    <h3 class="card__subscribe-title">Проект Prime</h3>
-                    <p class="card__subscribe-content">Маркетинг</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="card">
-                  <img src="./images/portfolio/img5.jpg" alt="Упаковочные коробки">
-                  <div class="card__subscribe">
-                    <h3 class="card__subscribe-title">Проект Boxes</h3>
-                    <p class="card__subscribe-content">Приложение</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="card">
-                  <img src="./images/portfolio/img6.jpg" alt="Монитор ПК">
-                  <div class="card__subscribe">
-                    <h3 class="card__subscribe-title">Inspiration has no Borders</h3>
-                    <p class="card__subscribe-content">Веб-сайт</p>
-                </div>
-                </div>
-              </li>
-              <li>
-                <div class="card">
-                  <img src="./images/portfolio/img7.jpg" alt="Раскрытый модный журнал ">
-                  <div class="card__subscribe">
-                    <h3 class="card__subscribe-title">Издание Limited Edition</h3>
-                    <p class="card__subscribe-content">Дизайн</p>
-                  </div>
-                </div>
-              </li>
-              <li>
-                <div class="card">
-                  <img src="./images/portfolio/img8.jpg" alt="Бирка">
-                  <div class="card__subscribe">
-                    <h3 class="card__subscribe-title">Проект LAB</h3>
-                    <p class="card__subscribe-content">Маркетинг</p>
-                  </div>  
-                </div>
-              </li>   
-              <li>
-                <div class="card">
-                  <img src="./images/portfolio/img9.jpg" alt="Работа с ноутбуком">
-                  <div class="card__subscribe">
-                    <h3 class="card__subscribe-title">Growing Business</h3>
-                    <p class="card__subscribe-content">Приложение</p>
-                  </div>  
-                </div>
-              </li>
-            </ul>
-          </section>
-        </div>
+        </section>
       </main>
 
       <footer>
@@ -147,10 +168,10 @@
           <a href="./index.html" class="logo logo-white">
             <span>Web</span>Studio
           </a>
-          <adress>
-            <ul class="adress-items">
+          <address>
+            <ul class="address-items">
               <li>
-                <a class="item-adress"
+                <a class="item-address"
                   href="https://goo.gl/maps/3Kuta68CW6E7DT3t5"
                   target="_blank"
                   rel="noopener nofollow"
@@ -158,13 +179,13 @@
                 >
               </li>
               <li>
-                <a class="adress-item-kontakt" href="mailto:info@example.com">info@example.com</a>
+                <a class="address-item-kontakt" href="mailto:info@example.com">info@example.com</a>
               </li>
               <li>
-                <a class="adress-item-kontakt" href="tel:+380991111111">+38 099 111 11 11</a>
+                <a class="address-item-kontakt" href="tel:+380991111111">+38 099 111 11 11</a>
               </li>
             </ul>
-          </adress>
+          </address>
         </div>
       </footer>
     </div>  
